Sat Mar 21 15:41:40 1998  Tom Tromey  <tromey@cygnus.com>

	* GnomeScott.c: Use gnome_message_box_*, not gnome_messagebox_*.

Sun Mar  8 16:13:14 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (INCLUDES): Added GNOME_INCLUDEDIR.

	* GnomeScott.c (main): Use new gnome_init.

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* GnomeScott.c (main): Added app_id "GnomeScott".

Sat Feb 14 09:45:08 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (GnomeScott_LDADD): Added INTLLIBS.

1998-02-01  Raja R Harinath  <harinath@cs.umn.edu>

	* programs/scottfree/GnomeScott.c (main): Return `int', not `void'.
	(PerformActions): Declare earlier, to prevent warning.

1998-01-26  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (LDADD): added $(DL_LIB) since these are now
	required for any user of libgnome.a.

Sun Jan 25 23:38:30 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* GnomeScott.c: Replace "Quit" with "Exit".

Sun Jan 25 20:36:56 EST 1998 Nathan Bryant <nbryan71@maine.edu>

	* Makefile.am (LDADD): added $(INTLLIBS).