@@ -1,3 +1,7 @@
+1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* GnomeScott.c: Ported to use zvt instead of GtkTty.
+
 Sat Mar 21 15:41:40 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* GnomeScott.c: Use gnome_message_box_*, not gnome_messagebox_*.
